[project]
name = "agent-communication-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.0",
    "crewai>=0.140.0",
    "crewai-tools>=0.49.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.5",
    "load-dotenv>=0.1.0",
    "markdownify>=1.1.0",
    "nest-asyncio>=1.6.0",
    "requests>=2.32.4",
    "smolagents>=1.19.0",
]
